# iwealth

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  NOTES.md  README.md  meson.build  msys64.cmake
doc/: CodeBlocks.md  Compile.md  Cpp.md  Env.md  code_blocks.md  env.md  todoList.txt
include/: iwealth.h
include/net/: ConcurrentRequest.h  Conn.h  Request.h  RequestStatistics.h  concurrent_request.h  conn.h  request.h
include/search/: ChinesePinYin.h  LevelTree.hpp  Trie.h
include/spider/: ShareHistorySpider.h  ShareListSpiderHexun.h  Spider.h  SpiderBasicInfoEastMoney.h  SpiderConceptListEastMoney.h  SpiderShareBasicInfo.h  SpiderShareBriefInfo.h  SpiderShareCategory.h  SpiderShareDayKlineBaidu.h  SpiderShareHistory.h  SpiderShareHistoryBaidu.h  SpiderShareKline.h  SpiderShareKlineUrl.h  SpiderShareListHexun.h  share_history_spider.h  share_list_spider_hexun.h  spider.h  stock_history_spider.h  stock_list_spider_hexun.h
include/stock/: HashProvinceShare.h  ShareCategory.h  Stock.h  StockDataStorage.h  StockKlines.h  share_data_center.h  stock.h
include/ui/: RichApplication.h  RichHelper.h  RichMainFrame.h  rich_main_frame.h
include/ui/components/: DialogShareSearch.h  PanelKline.h  PanelShareSearch.h  PanelStockQuota.h  PanelStockQuote.h  PopupWndShareSearch.h  RichGrid.h  RichGridCellStringRenderer.h  RichGridColumnHeaderProvider.h  RichGridColumnHeaderRenderer.h  RichGridTable.h  RichKlineCtrl.h  RichKlineInfoCtrl.h  RichVolumeBar.h  RichVolumeBarCtrl.h
include/util/: Color.h  ConsoleTable.h  DateTime.h  EasyLogger.h  FileTool.h  Global.h  Timer.h  console_table.h  easy_logger.h  global.h
lib/curl/aarch64_linux/: libcurl.so.4
lib/curl/arm64/: libcurl.la  libcurl.so.4.8.0  libssl.so.3
lib/curl/x86_64/: libcurl.so.4  libssl.so.3
lib/curl/x86_64_linux/: libcurl.la
lib/nlohmann/: json_fwd.hpp
lib/wxWidgets/3.2.4/aarch64_linux/: libwx_baseu_net-3.2.so.0  libwx_baseu_net-3.2.so.0.2.2  libwx_baseu_xml-3.2.so.0  libwx_baseu_xml-3.2.so.0.2.2  libwx_gtk3u_adv-3.2.so.0  libwx_gtk3u_adv-3.2.so.0.2.2  libwx_gtk3u_aui-3.2.so.0  libwx_gtk3u_aui-3.2.so.0.2.2  libwx_gtk3u_gl-3.2.so.0  wxrc-3.2  (+8 more)
lib/wxsvg/aarch64_linux/: libwxsvg.la
lib/wxsvg/x86_64_linux/: libwxsvg.la  libwxsvg.so.3
net/: conn.h  request.c  request.h
src/: Application.cpp  Features.md  application.cpp
src/console/: Smith.cpp  Test.cpp  main.cpp
src/formula/: FormulaBase.cpp  FormulaBase.h  FormulaEma.cpp  FormulaEma.h
src/net/: ConcurrentRequest.cpp  ConcurrentRequest.h  Conn.h  Request.cpp  Request.h  RequestStatistics.h  concurrent_request.cpp  request.c  request.cpp
src/search/: ChinesePinYin.cpp  ChinesePinYin.dic  Trie.cpp  Trie.h  trie.cpp
src/spider/: ShareHistorySpider.cpp  ShareListSpiderHexun.cpp  Spider.cpp  Spider.h  SpiderBasicInfoEastMoney.cpp  SpiderCompositeIndex.cpp  SpiderCompositeIndex.h  SpiderConceptListEastMoney.cpp  SpiderShareBasicInfo.cpp  SpiderShareBriefInfo.cpp  SpiderShareCategory.cpp  SpiderShareCategory.h  SpiderShareDayKlineBaidu.cpp  SpiderShareHistory.cpp  SpiderShareHistoryBaidu.cpp  SpiderShareKline.cpp  SpiderShareKline.h  SpiderShareKlineProvider.cpp  SpiderShareKlineProvider.h  SpiderShareKlineProviderBaidu.cpp  SpiderShareKlineProviderBaidu.h  SpiderShareKlineProviderEastMoney.cpp  SpiderShareKlineProviderEastMoney.h  SpiderShareKlineUrl.h  SpiderShareListHexun.cpp  SpiderShareQuote.cpp  SpiderShareQuote.h  share_history_spider.cpp  share_list_spider_hexun.cpp  spider.cpp  stock_history_spider.cpp  stock_list_spider_hexun.cpp
src/stock/: HashProvinceShare.cpp  ShareCategory.cpp  ShareCategory.h  Stock.cpp  Stock.h  StockCompositeIndex.cpp  StockCompositeIndex.h  StockDataStorage.cpp  StockDataStorage.h  StockKlineCache.cpp  StockKlineCache.h  StockKlines.cpp  StockKlines.h  StockMemoryKline.cpp  StockMemoryKline.h  StockMonitorShare.cpp  StockMonitorShare.h  StockShareKline.cpp  StockShareKline.h  UserFavoriteShare.cpp  UserFavoriteShare.h  share_data_center.cpp
src/ui/: RichApplication.cpp  RichApplication.h  RichDialogKlineInfo.cpp  RichDialogKlineInfo.h  RichDialogShareSearch.cpp  RichDialogShareSearch.h  RichHelper.cpp  RichHelper.h  RichMainFrame.cpp  RichMainFrame.h  RichPanelFavoriteShare.cpp  RichPanelFavoriteShare.h  RichPanelKline.cpp  RichPanelKline.h  RichPanelStockQuote.cpp  RichPanelStockQuote.h  RichPanelTest.cpp  RichPanelTest.h  rich_app.cpp  rich_main_frame.cpp  wxapplication.cpp
src/ui/components/: DialogShareSearch.cpp  PanelKline.cpp  PanelShareSearch.cpp  PanelStockQuota.cpp  PanelStockQuote.cpp  PopupWndShareSearch.cpp  RichCheckBox.cpp  RichCheckBox.h  RichDialog.cpp  RichDialog.h  RichDialogKlineInfo.cpp  RichDialogKlineInfo.h  RichDialogShareSearch.cpp  RichDirectUICtrl.cpp  RichDirectUICtrl.h  RichFrame.cpp  RichFrame.h  RichFrameBorder.cpp  RichFrameBorder.h  RichGrid.cpp  RichGrid.h  RichGridCellStringRenderer.cpp  RichGridColumnHeaderProvider.cpp  RichGridColumnHeaderRenderer.cpp  RichGridColumnHeaderRenderer.h  RichGridTable.cpp  RichGridTable.h  RichIndicatorCtrl.cpp  RichIndicatorCtrl.h  RichKlineCtrl.cpp  RichKlineCtrl.h  RichKlineInfoCtrl.cpp  RichKlineMiniPanel.cpp  RichKlineMiniPanel.h  RichMiniPanel.cpp  RichMiniPanel.h  RichPanel.cpp  RichPanel.h  RichPanelKline.cpp  RichPanelKline.h  (+33 more)
src/ui/events/: RichCheckBoxEvent.cpp  RichCheckBoxEvent.h  RichRadioEvent.cpp  RichRadioEvent.h  RichShareSearchEvent.cpp  RichShareSearchEvent.h
src/ui/indicators/: RichAmountIndicatorCtrl.cpp  RichAmountIndicatorCtrl.h  RichIndicatorCtrl.cpp  RichIndicatorCtrl.h  RichMinuteVolumeIndicatorCtrl.cpp  RichMinuteVolumeIndicatorCtrl.h  RichTurnoverRateIndicatorCtrl.cpp  RichTurnoverRateIndicatorCtrl.h  RichVolumeIndicatorCtrl.cpp  RichVolumeIndicatorCtrl.h
src/ui/wxsmith/: DialogShareSearch.wxs  PanelShareSearch.wxs  PanelStockQuota.wxs  PanelStockQuote.wxs  RichMainFrame.wxs
src/util/: Color.h  ConsoleTable.cpp  DateTime.cpp  DateTime.h  EasyLogger.cpp  EasyLogger.h  FileTool.cpp  FileTool.h  Global.cpp  Global.h  Macro.h  RichResult.cpp  RichResult.h  Timer.cpp  console_table.cpp  easy_logger.cpp  global.cpp
(+33 files in other folders)
